--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "brotli-dec-wasm": "^2.3.0",
     "material-symbols": "^0.22.2",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/brotli": "^1.3.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
