--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "brotli-dec-wasm": "^2.3.0",
+    "lucide-react": "^0.439.0",
     "material-symbols": "^0.22.2",
-    "next": "14.2.8",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^14.2.9",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/brotli": "^1.3.4",
